# ising_you_sing

./: .gitignore  README.md  requirements.txt
.history/Ising/: Ising_20241225131057.py  Ising_20241225131101.py  Ising_20241225131105.py  Ising_20241225131311.py
.history/src/: run_20241225131155.py  run_20241225131210.py  run_20241225131220.py  run_20241225131246.py  run_20241225131247.py  run_20241225131258.py  run_20241225131315.py  run_20241225131317.py  run_20241225131319.py  run_20241225131322.py
Ising/: Ising.py  vis_utils.py
cpp/: CMakeLists.txt  main.cpp  plot.gp
cpp/include/: Ising.hpp
src/: run.py
